--- a/FinalProject.ipynb
+++ b/FinalProject.ipynb
@@ -313,13 +313,13 @@
       "cell_type": "code",
       "source": [
         "history = model.fit(\n",
-        "      train_generator,\n",
-        "      steps_per_epoch=8,\n",
-        "      epochs=15,\n",
-        "      verbose=1,\n",
-        "      validation_data = validation_generator,\n",
-        "      validation_steps=8,\n",
-        "      callbacks=[callbacks])"
+        "      train_generator,          # Generator that provides batches of training images\n",
+        "      steps_per_epoch=8,        # Number of batches to process per epoch\n",
+        "      epochs=15,                # Total number of training cycles\n",
+        "      verbose=1,                # Display progress output during training\n",
+        "      validation_data=validation_generator,  # Generator for validation images\n",
+        "      validation_steps=8,       # Number of validation batches per epoch\n",
+        "      callbacks=[callbacks])    # Custom callback (early stopping based on val_loss)\n"
       ],
       "metadata": {
         "id": "N4ILL3QblTqd"
